# pyVBRc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  release_history.md  release_notes.md  requirements.txt  requirements_dev.txt  requirements_style.txt  setup.cfg  setup.py  sync_style_reqs.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-test.yaml  check-build.yml  check-manifest.yaml  create-release.yaml  pypi-release.yaml  style-check.yaml
examples/: anisotropy.ipynb  ex_001_load_VBRc_structure.ipynb  ex_002_interpolating_VBRc_structures.ipynb  ex_002_load_VBRc_Tdepednence.ipynb  ex_003_interpolating_VBRc_structure.ipynb  ex_003_vbr_bayes_intro.ipynb  ex_004_anisotropy.ipynb  ex_004_isotropic_mixtures.ipynb  ex_004_vbr_bayes_intro.ipynb  ex_005_anisotropy.ipynb  interpolate_VBRc_structure.py  load_VBRc_structure.py  load_VBRc_structure_Tdependence.py  vbr_bayes_generate_vbr.m  vbr_bayes_intro.ipynb
pyVBRc/: cli.py  logging.py  vbr_units.py  vbrc_structure.py
pyVBRc/anisotropy/: _stiffness.py  anisotropy.py  materials.py
pyVBRc/anisotropy/tests/: test_anisotropy.py  test_isotropic_mixtures.py
pyVBRc/materials/: __init__.py  _stiffness.py  materials.py
pyVBRc/materials/tests/: test_anisotropy.py  test_isotropic_mixtures.py
pyVBRc/sample_data/: VBRc_sample_LUT.mat  VBRc_sample_LUT_R2021a.mat  VBRc_sample_LUT_v1pt0pt0.mat  __init__.py  generate_sample_vbr_struct_file.m  sample_data.py
pyVBRc/tests/: __init__.py  test_pyVBRc.py  test_sample_data.py
