[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyVBRc"
version = "0.2.0"
authors = [
  { name="Chris Havlin", email="chris.havlin@gmail.com" },
]
description="python utilities for working with the VBRc"
readme = "README.md"
requires-python = ">=3.9"
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies=["numpy",
              "scipy",
              "matplotlib",
              "packaging",
              "unyt",
 ]

[tool.setuptools]
packages = ["pyVBRc"]

[project.urls]
"Homepage" = "https://github.com/vbr-calc/pyVBRc"
"Bug Tracker" = "https://github.com/vbr-calc/pyVBRc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=3",
    "pytest-cov",
    "pre-commit",
]
